<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="app_name">Aqua</string>
    <string name="btn_map_mode">Map</string>
    <string name="btn_list_mode">List</string>
    <string name="btn_search">Search</string>
    <string name="msg_you_are_here">Your are here</string>
    <string name="msg_author">Author</string>
    <string name="msg_last_update">Last update</string>
    <string name="msg_comments">Comments</string>
    <string name="msg_visits">Visits</string>
    <string name="msg_scorings">Scorings</string>
    <string name="msg_comment_content_mandatory">The comment content field is mandatory</string>
    <string name="msg_uploading_processing_data">Uploading and processing data...</string>
    <string name="msg_place_saved_successfully">Sample saved successfully</string>
    <string name="msg_name_mandatory">The name field is mandatory</string>
    <string name="msg_place_geolocation_not_set">You have not set the sample geolocation, please, click on the show map button</string>
    <string name="msg_comment_saved_successfully">Comment saved successfully</string>
    <string name="msg_email_mandatory">The email field is mandatory</string>
    <string name="msg_nickname_mandatory">The nickname field is mandatory</string>
    <string name="msg_password_mandatory">The password field is mandatory</string>
    <string name="msg_password_confirmation_mandatory">The password confirmation field is mandatory</string>
    <string name="msg_password_confirmation_doesnt_match">The password confirmation doesn\'t match</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_by">by</string>
    <string name="msg_vote_saved_successfully">Your vote was saved successfully</string>
    <string name="msg_email">Email:</string>
    <string name="msg_user_email">User email</string>
    <string name="msg_password">Password:</string>
    <string name="msg_user_password">User password</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_register">Sign in</string>
    <string name="btn_view">View</string>
    <string name="btn_close">Close</string>
    <string name="msg_scan_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_title">Title:</string>
    <string name="btn_save">Save Sample</string>
    <string name="btn_show_map">Show map</string>
    <string name="btn_image_sample">Add Image</string>
    <string name="msg_comment_content">Comment content:</string>
    <string name="msg_name">Name:</string>
    <string name="btn_in_situ">In situ</string>
    <string name="btn_private">Private</string>
    <string name="msg_nickname">Nickname:</string>
    <string name="msg_confirm_password">Confirm password:</string>
    <string name="btn_send">Send</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_enter_text_search">Enter text to search</string>
    <string name="btn_add_image">Add image</string>
    <string name="btn_add_video">Add video</string>
    <string name="btn_new_comment">New comment</string>
    <string name="btn_view_comments">View comments</string>
    <string name="btn_notify">Notify</string>
    <string name="msg_mandatory_field">Mandatory field</string>
    <string name="msg_of">of</string>
    <string name="msg_message">Message:</string>
    <string name="msg_add_place">Add place</string>
    <string name="msg_scan_qr">Scan QR</string>
    <string name="msg_my_account">My account</string>
    <string name="msg_recipient">Recipient email</string>
    <string name="msg_you_must_login">You must login</string>
    <string name="msg_sending_vote">Sending vote</string>
    <string name="btn_login">Login</string>
    <string name="msg_categories">Categories</string>
    <string name="btn_category">Category</string>
    <string name="msg_choose_category">Choose a category</string>
    <string name="msg_all_categories">All</string>
    <string name="msg_profiles">Profiles</string>
    <string name="msg_logout">Logout</string>
    <string name="msg_none">None</string>
    <string name="msg_image">Image:</string>
    <string name="msg_incorrect_youtube_link">The link you introduced was not a valid Youtube link</string>
    <string name="btn_avatar">Avatar</string>
    <string name="btn_add_youtube">Add youtube</string>
    <string name="btn_new_sample">New Sample</string>
    <string name="msg_place_name">Place of the sample</string>
    <string name="msg_ph">pH</string>
    <string name="msg_chlorine">Chlorine</string>
    <string name="msg_place_description">Description of the sample place</string>
    <string name="msg_login_error">There was a login error. Check your mail and password.</string>
    <string name="msg_place_name_mandatory">The name of the place field is mandatory</string>
    <string name="msg_ph_mandatory">pH value field is mandatory</string>
    <string name="msg_chlorine_mandatory">Chlorine value field is mandatory</string>
    <string name="btn_map_selection">Place here</string>
    <string name="title_activity_map_location">MapLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
  	<string name="btn_locate_sample">Place Sample</string>
  	<string name="msg_place_saved_successfully_no_file">Sample saved, but file failed</string>

</resources>
