<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:padding="10dip">
		<RelativeLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<ImageView android:id="@+id/logo_image" android:src="@drawable/logo_feelicity"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_marginTop="10dip" />

			<TextView android:id="@+id/email_view" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/msg_email"
				android:layout_below="@id/logo_image" android:layout_marginTop="10dip" />
			<EditText android:hint="@string/msg_user_email" android:id="@+id/email_text"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@id/email_view" />
			<TextView android:id="@+id/password_view"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/msg_password" android:layout_below="@id/email_text"
				android:layout_marginTop="30dip" />
			<EditText android:hint="@string/msg_user_password" android:id="@+id/password_text"
				android:password="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_below="@id/password_view" />

			<LinearLayout android:orientation="horizontal" android:layout_below="@id/password_text"
				android:layout_marginTop="30dip" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:gravity="center_horizontal">
				<Button android:id="@+id/login_button" android:text="@string/btn_enter"
					android:layout_width="140dip" android:layout_height="wrap_content"
					android:layout_below="@id/password_text" android:drawableLeft="@drawable/ic_menu_login">
				</Button>
				<Button android:id="@+id/register_button" android:text="@string/btn_register"
					android:layout_width="140dip" android:drawableLeft="@drawable/ic_menu_invite" android:layout_height="wrap_content">
				</Button>
			</LinearLayout>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
