<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dip">

	<LinearLayout android:id="@+id/comment_title"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/comment_title_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/msg_title" android:layout_marginTop="10dip" />
		<EditText android:id="@+id/comment_title_text"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:id="@+id/actions"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal" android:layout_alignParentBottom="true">
		<Button android:id="@+id/save_button" android:text="@string/btn_save"
			android:layout_width="150dip" android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" android:layout_marginTop="10dip"
			android:layout_alignParentRight="true" android:layout_marginRight="10dip"
			android:drawableLeft="@android:drawable/ic_menu_save">
		</Button>
	</LinearLayout>

	<LinearLayout android:id="@+id/attachments"
    android:layout_marginTop="5dip" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:layout_above="@id/actions"
    android:gravity="center_horizontal">
    <Button android:id="@+id/attachments_button" android:text="@string/btn_attachments"
      android:layout_width="100dip" android:layout_height="wrap_content"
      android:layout_alignRight="@+id/content_text" android:drawableTop="@drawable/ic_menu_attachment">
    </Button>
    <Button android:id="@+id/notify_button" android:text="@string/btn_notify"
      android:layout_width="100dip" android:layout_height="wrap_content"
      android:drawableTop="@android:drawable/ic_menu_send">
    </Button>
  </LinearLayout>

	<LinearLayout android:id="@+id/comment_content"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_below="@id/comment_title"
		android:layout_above="@id/attachments">
		<TextView android:id="@+id/comment_content_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginTop="10dip" android:text="@string/msg_comment_content" />
		<EditText android:id="@+id/comment_content_text"
			android:hint="@string/msg_mandatory_field" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="top" />
	</LinearLayout>

</RelativeLayout>
